align with pr quality review

--- a/projects/swimlane/ngx-charts/src/lib/common/legend/scale-legend.component.scss
+++ b/projects/swimlane/ngx-charts/src/lib/common/legend/scale-legend.component.scss
@@ -24,7 +24,7 @@
   .horizontal-legend {
     &.scale-legend {
       flex-direction: row;
-      margin-left: 0px;
+      margin-left: 0;
       padding: 0 10px;
     }
 
