Accept legendColumns input to control legend width Pass contextual data to *Formatting customizers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [tooltipDisabled]="tooltipDisabled"
@@ -53,6 +54,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [tooltipDisabled]="tooltipDisabled"
@@ -90,6 +92,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [tooltipDisabled]="tooltipDisabled"
@@ -129,6 +132,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         (legendLabelClick)="onLegendLabelClick($event)"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
@@ -167,6 +171,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         (legendLabelClick)="onLegendLabelClick($event)"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
@@ -203,6 +208,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         (legendLabelClick)="onLegendLabelClick($event)"
         [showYAxisLabel]="showYAxisLabel"
@@ -239,6 +245,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         (legendLabelClick)="onLegendLabelClick($event)"
         [showYAxisLabel]="showYAxisLabel"
@@ -273,6 +280,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [xAxisLabel]="xAxisLabel"
@@ -302,6 +310,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [explodeSlices]="explodeSlices"
         [labels]="showLabels"
         [doughnut]="doughnut"
@@ -359,6 +368,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
         [xAxis]="showXAxis"
@@ -399,6 +409,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
         [xAxis]="showXAxis"
@@ -431,6 +442,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
         [showXAxisLabel]="showXAxisLabel"
@@ -469,6 +481,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
         [xAxis]="showXAxis"
@@ -508,6 +521,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         [yAxis]="showYAxis"
@@ -546,6 +560,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [gradient]="gradient"
         [xAxis]="showXAxis"
         (legendLabelClick)="onLegendLabelClick($event)"
@@ -589,6 +604,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showGridLines]="showGridLines"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
@@ -733,6 +749,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [results]="single"
         [animations]="animations"
         [textValue]="gaugeTextValue"
@@ -787,6 +804,7 @@
           [legend]="false"
           [legendTitle]="legendTitle"
           [legendPosition]="legendPosition"
+          [legendColumns]="legendColumns"
           (legendLabelClick)="onLegendLabelClick($event)"
           [gradient]="gradient"
           [xAxis]="showXAxis"
@@ -821,6 +839,7 @@
           [legend]="false"
           [legendTitle]="legendTitle"
           [legendPosition]="legendPosition"
+          [legendColumns]="legendColumns"
           (legendLabelClick)="onLegendLabelClick($event)"
           [gradient]="gradient"
           [xAxis]="false"
@@ -926,6 +945,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         (legendLabelClick)="onLegendLabelClick($event)"
         [gradient]="gradient"
         [xAxis]="showXAxis"
@@ -968,6 +988,7 @@
         [legend]="showLegend"
         [legendTitle]="legendTitle"
         [legendPosition]="legendPosition"
+        [legendColumns]="legendColumns"
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [tooltipDisabled]="tooltipDisabled"
@@ -1038,6 +1059,7 @@
       [legend]="showLegend"
       [legendTitle]="legendTitle"
       [legendPosition]="legendPosition"
+      [legendColumns]="legendColumns"
       (legendLabelClick)="onLegendLabelClick($event)"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
@@ -1073,6 +1095,7 @@
       [legend]="showLegend"
       [legendTitle]="legendTitle"
       [legendPosition]="legendPosition"
+      [legendColumns]="legendColumns"
       (legendLabelClick)="onLegendLabelClick($event)"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
@@ -1300,6 +1323,10 @@
             <option value="right">Right</option>
             <option value="below">Below</option></select
           ><br />
+        <div *ngIf="chart.options.includes('legendColumns') && legendPosition === 'right'">
+          <label>Legend Columns:</label>
+          <input style="margin-left: 10px" type="number" min="1" max="12" [(ngModel)]="legendColumns" />
+        </div>
         </div>
         <div *ngIf="chart.options.includes('tooltipDisabled')">
           <label>
