Enable yScaleMin param for demo app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,7 @@
         [barPadding]="barPadding"
         [roundDomains]="roundDomains"
         [roundEdges]="roundEdges"
+        [yScaleMin]="yScaleMin"
         [yScaleMax]="yScaleMax"
         [noBarWhenZero]="noBarWhenZero"
         [showDataLabel]="showDataLabel"
